--- a/src/css/themes/default/vars.css
+++ b/src/css/themes/default/vars.css
@@ -115,7 +115,7 @@
   --logo-img: url("../../themes/default/assets/logo.png");
   --logo-color: #7a737a;
   --logo-color2: #7a737a;
-  --logo-top-margin: 55px;
+  --logo-top-margin: 50px;
   --logo-left-margin: 30px;
   --logo-img-height: 50px;
   --logo-h1-mbottom: initial;
