--- a/src/css/themes/ke/vars.css
+++ b/src/css/themes/ke/vars.css
@@ -12,6 +12,8 @@
     --font-1: "Roboto Condensed", sans-serif;
     --font-2: "Roboto Condensed", sans-serif;
     --font-3: "Roboto Condensed", sans-serif;
+    --small-heading-font: "Roboto Condensed", sans-serif;
+    --react-tabs-tab-font: "Roboto Condensed", sans-serif;
   /* Fonts */
 
   /* app-custom */
